language/move-lang/tests/move_check/parser/struct_resource.exp
error: 

   ┌── tests/move_check/parser/struct_resource.move:3:12 ───
   │
 3 │     struct resource S { }
   │            ^^^^^^^^ Unexpected token: 'resource'
   ·
 3 │     struct resource S { }
   │            -------- Expected: a name value
   │

