language/move-lang/tests/move_check/parser/struct_resource.move
module M {
    // The "resource" keyword is expected before the "struct" keyword.
    struct resource S { }
}
